--- a/board/templates/pages/about.html
+++ b/board/templates/pages/about.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h2>About</h2>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block header %}
+    <h2>{% block title %}About{% endblock title %}</h2>
+{% endblock header %}
+
+{% block content %}
+    <p>
+        Go to the page about <a href="{{ url_for('pages.home') }}">Home page</a>
+    </p>
+{% endblock content %}
