--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Message Board</h1>
+    {% include("_navigation.html") %}
     <section>
         <header>
             {% block header %}{% endblock header %}
